fix to pass build

--- a/src/public/popup.html
+++ b/src/public/popup.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8" />
     <title>title</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="scripts/external_modules/encoding.min.js"></script>
-    <!--<script src="script.js" type="module"></script>-->
-    <script src="main.js" type="module"></script>
+    <script src="bundle.js" type="module"></script>
   </head>
   <body>
     <div>
