add login para,

--- a/src/public/popup.html
+++ b/src/public/popup.html
@@ -26,5 +26,11 @@
         <a href="#" download="config.json"></a>
       </label>
     </div>
+    <div>
+      <input type="button" id="importData" value="import month data" />
+    </div>
+    <div>
+      <input type="button" id="exportData" value="export month data" />
+    </div>
   </body>
 </html>
